--- a/data/contact.yaml
+++ b/data/contact.yaml
@@ -1,5 +1,5 @@
-email: 'example@example.com'
-phone: 'XXXX XXX XXX'
+email: 'tw@candhconsultants.co.uk'
+phone: '(01727) 739894'
 businessName: 'Hugo Serif'
 address: |
   
